<resources>
    <string name="app_name">Score Calculator</string>

    <string name="message_color_label">Color Identification: </string>
    <string name="message_color_points_initial">0 color points</string>
    <string name="message_color_points">%d color points</string>


    <string name="button_3_fixes">3 FIXES</string>
    <string name="button_2_fixes">2 FIXES</string>
    <string name="button_1_fixes">1 FIXES</string>
    <string name="button_0_fixes">0 FIXES</string>

    <string name="message_distance_from_cones">Distance from cones:</string>
    <string name="messages_distance_ft">Distance [ft]</string>
    <string name="message_points">Points</string>

    <string name="message_near_ball">Near Ball</string>
    <string name="message_far_ball">Far Ball</string>
    <string name="message_robot_home">Robot Home</string>

    <string name="button_update">UPDATE</string>
    <string name="button_wb_failure">WB FAILURE</string>
    <string name="button_wb_success">WB SUCCESS</string>
    <string name="button_reset">RESET</string>

    <string name="message_white_black_points_label">White/Black (WB) Mission:</string>
    <string name="message_white_black_points_initial">0 wb points</string>
    <string name="message_white_black_points">%d wb points</string>
    <string name="message_total_score">%d points</string>
    <string name="message_total_score_initial">0 points</string>
    <string name="just_zero">0</string>
    <string name="NearBallPointsTextView">%d </string>
    <string name="FarBallPointsTextView">%d </string>
    <string name="RobotHomePointsTextView">%d </string>
</resources>
