<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/message_textview"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:id="@+id/fixes_button">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:onClick="handle3fixes"
            android:text="@string/button_3_fixes" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="handle2fixes"
            android:text="@string/button_2_fixes" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="handle1fixes"
            android:text="@string/button_1_fixes" />

        <Button
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="handle0fixes"
            android:text="@string/button_0_fixes" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_distance_from_cones"
        android:padding="5dip"
        android:id="@+id/message_distance_from_cones"
        android:layout_below="@id/fixes_button"
    />

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2"
        android:layout_below="@id/message_distance_from_cones">
        <TableRow>
            <TextView
                android:text=""
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meaages_distance_ft"
                android:padding="5dip"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message_points"
                android:padding="5dip"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/message_near_ball"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="_____________"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <TextView
                android:text="0"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/message_far_ball"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="_____________"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="0"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/message_robot_home"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="_____________"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="0"
                android:padding="5dip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/message_total_score_initial"
        android:gravity="right"
        android:text="@string/button_update" />

    <TextView
        android:id="@+id/message_white_black_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_wb_failure"
        android:layout_marginBottom="223dp"
        android:padding="5dp"
        android:text="@string/message_white_black_points_label"
        android:textColor="@color/text"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/message_white_black_points"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/message_white_black_points_label"
        android:layout_marginEnd="24dp"
        android:gravity="right"
        android:text="@string/message_white_black_points_initial"
        android:textColor="@color/text" />


    <Button
        android:id="@+id/button_wb_failure"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_wb_success"
        android:layout_marginStart="25dp"
        android:layout_weight="1"
        android:text="@string/button_wb_failure" />


    <Button
        android:id="@+id/button_wb_success"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/message_white_black_points"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="158dp"
        android:layout_weight="1"
        android:text="@string/button_wb_success" />


    <TextView
        android:id="@+id/message_textview"
        android:layout_width="337dp"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:layout_marginStart="10dp"
        android:text="@string/message_color_label"
        android:textColor="@color/text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message_textview2"
        android:layout_width="337dp"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:layout_marginStart="10dp"
        android:text="@string/message_color_points_initial"
        android:gravity="right"
        android:padding="2dp"
        android:textColor="@color/text"
        android:textSize="18sp" />


     <TextView
        android:id="@+id/message_total_score_initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:text="@string/message_total_score_initial"
        android:textSize="32sp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/update_button"
        android:layout_alignRight="@+id/update_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:layout_weight="1"
        android:text="@string/button_reset" />

</RelativeLayout>